# Skyegrid

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  main.cpp  main_voxelize.cpp  shell.html  skyegrid.cpp
Shaders/: blit.wgsl  computeCompactVoxel.wgsl  computeUploadVoxel.wgsl  computeVoxel.wgsl  computeVoxelization.wgsl  debug.wgsl
includes/: SkyegridManager.hpp  VoxelIO.hpp  VoxelManager.hpp  Voxelizer.hpp  constants.hpp
includes/Rendering/: RenderEngine.hpp  wgpuBundle.hpp  wgpuHelpers.hpp
includes/Rendering/Camera/: Camera.hpp
includes/Rendering/Pipelines/: pipelines.hpp
meshes/: CC.txt  WallE.ply  cake.fbx  earth.ply  flask.ply  spectre.ply
src/: SkyegridManager.cpp  VoxelManager.cpp  Voxelizer.cpp
src/Rendering/: RenderEngine.cpp  wgpuBundle.cpp  wgpuHelpers.cpp
src/Rendering/Camera/: Camera.cpp
src/Rendering/Pipelines/: pipelines.cpp
test/: CMakeLists.txt  main.cpp
test/src/: computeTest.cpp  computeTest.h
